// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A-Router smoke renders at a path 1`] = `
<div
  role="group"
  tabindex="-1"
>
  <div>
    Dash
    <br />
    <br />
    <a
      data-testid="home-anchor"
      href="/"
    >
      Home
    </a>
  </div>
</div>
`;

exports[`A-Router smoke renders the root component at "/" 1`] = `
<div
  role="group"
  tabindex="-1"
>
  <div>
    Home
    <br />
    <a
      data-testid="dash-anchor"
      href="/dash"
    >
      dash
    </a>
  </div>
</div>
`;
